fixed overflow out body element1

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-
-
 body {
     background: repeating-linear-gradient(
         to right,
@@ -11,11 +9,9 @@ body {
     margin: 0;
     padding: 0;
 
-    overflow-x: hidden;
-}
-
-#root {
     width: 100%;
+
+    overflow-x: hidden;
 }
 
 .divider {
